# A-MolSim

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  cmake.sh  help.txt
.github/workflows/: CI-tests.yml  memory.yml
Tests/: CMakeLists.txt  MolSimTests.cpp
Tests/XmlTestInput/: simpleSimulation.xml
Tests/xmlTestInput/: simpleCuboid.xml  simpleSimulation.xml  simpleSphere.xml
cmake/modules/: doxygen.cmake
input/: collision.json  collision3.json  collision3.xml  collision3_upwards.json  collision_outflow.json  drop.json  generated_collision3.json  rt-insta big.json  rt-insta smol.json  rt-insta-big.json  rt-insta-smol.json  singleCuboidPeriodic.json  test.json  testMembrane.json
old/: ParticleContainer.cpp  ParticleContainer.h
src/: BoundaryCondition.cpp  BoundaryCondition.h  CMakeLists.txt  Cuboid.h  CuboidGenerator.cpp  CuboidGenerator.h  FileReader.cpp  FileReader.h  ForceCalculator.cpp  ForceCalculator.h  ForceV1.cpp  ForceV1.h  HelperFunctions.cpp  HelperFunctions.h  LennardJonesForce.cpp  LennardJonesForce.h  LogLevel.h  LogManager.cpp  LogManager.h  MolSim.cpp  MolSim.h  MolSimTests.cpp  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleContainerDS.cpp  ParticleContainerDS.h  ParticleContainerLC.cpp  ParticleContainerLC.h  ParticleGenerator.cpp  ParticleGenerator.h  SphereGenerator.cpp  SphereGenerator.h  Thermostat.cpp  Thermostat.h
src/XMLSchema/: XMLReader.cpp  XMLReader.h  schema.cxx  schema.h  schema.xsd
src/XMLSchema/Constructors/: CuboidConstructor.cpp  CuboidConstructor.h  SimulationConstructor.cpp  SimulationConstructor.h
src/boundaryConditions/: BoundaryCondition.cpp  BoundaryCondition.h  Outflow.cpp  Outflow.h  Overflow.cpp  Overflow.h  Periodic.cpp  Periodic.h  Reflecting.cpp  Reflecting.h
src/fileReader/: FileReader.cpp  FileReader.h
src/forces/: Force.cpp  Force.h  GravPot.cpp  GravPot.h  LennJon.cpp  LennJon.h
src/logOutputManager/: LogManager.cpp  LogManager.h  OutputManager.cpp  OutputManager.h  outputManager.cpp  outputManager.h
src/outputWriter/: VTKWriter.cpp  VTKWriter.h  XYZWriter.cpp  XYZWriter.h  vtk-unstructured.cpp  vtk-unstructured.h
src/particleContainers/: ParticleContainer.cpp  ParticleContainer.h  ParticleContainerDirSum.cpp  ParticleContainerDirSum.h  ParticleContainerLinCel.cpp  ParticleContainerLinCel.h
src/particleGenerator/: ParticleGenerator.cpp  ParticleGenerator.h
src/utils/: ArrayUtils.h  MaxwellBoltzmannDistribution.h
src/xmlSchema/: XMLReader.cpp  XMLReader.h  generateXMLTree.sh  schema.cpp  schema.h  schema.xsd
src/xmlSchema/constructors/: CuboidConstructor.cpp  CuboidConstructor.h  SimulationConstructor.cpp  SimulationConstructor.h  SphereConstructor.cpp  SphereConstructor.h
